# REMix-NZ

./: .gitignore  .pre-commit-config.yaml  README.md
framework/: .flake8  .gitignore  LICENSE  MakeFile  pyproject.toml
framework/.gitlab/issue_templates/: bug_report.md  feature_request.md
framework/.gitlab/merge_request_templates/: merge_request.md
framework/docs/: accessibility.md  conf.py  imprint.md  index.md  privacy.md  references.bib  terms.md  zliterature.md
framework/docs/_static/css/: custom.css
framework/docs/_templates/: copyright.html
framework/docs/about/: feature-overview.md  index.md  introduction.md
framework/docs/contributing/: how.md  index.md  what.md
framework/docs/documentation/: cli-arguments.md  debugging-hints.md  index.md  solving-large-models.md
framework/docs/documentation/modeling-concept/: commodities.md  converter.md  index.md  indicators.md  sourcesink.md  storage.md  transfer.md
framework/docs/documentation/tech-docs/: index.md  remix.api.md  remix.cli.md  remix.schema.md  remix.tools.md
framework/docs/getting-started/: index.md  install-remix.md  projects.md
framework/docs/getting-started/basic-examples/: energy-conversion-indicators.md  energy-conversion-intro.md  energy-conversion-mixed-integer.md  index.md  secured-capacity.md  slack-variables.md  transport-system.md  variable-renewable-energy.md
framework/docs/getting-started/tutorials/: advanced.md  basic.md  index.md
framework/docs/temporary/: chp.md  electric_boiler.md  electric_demand.md  electric_heat_pump.md  electric_vehicles.md  electrolyzers.md  fuel_boiler.md  gas_transmission.md  power_transmission.md  storage.md
framework/remix/framework/: __init__.py
framework/remix/framework/api/: dataset.py  instance.py  run.py  test.py  transform.py
framework/remix/framework/backend/: excel.py  polars.py
framework/remix/framework/cli/: __init__.py  build_schemas.py  main.py  run.py  test.py  transform.py
framework/remix/framework/model/: run_remix.gms
framework/remix/framework/schema/: manager.py  parser.py  templates.py
framework/remix/framework/tools/: gdx.py  inheritance.py  mga.py  plots.py  transfer.py  utilities.py
framework/testing/: conftest.py  test_api.py  test_backend.py  test_cli.py  test_instances.py  test_schema.py  test_tools.py  test_tutorials.py  testing_global.yaml
framework/tutorials/: README.md
framework/tutorials/_input/: profiles.csv  tutorial.geojson
framework/tutorials/tutorial_101/: tutorial_101a_build.py  tutorial_101b_run.py  tutorial_101c_evaluate.py  tutorial_101d_bonus.md
framework/tutorials/tutorial_102/: tutorial_102a_build.py  tutorial_102b_run.py  tutorial_102c_evaluate.py  tutorial_102d_bonus.md
framework/tutorials/tutorial_103/: tutorial_103a_build.py  tutorial_103b_run.py  tutorial_103c_evaluate.py
framework/tutorials/tutorial_201/: tutorial_201a_build.py  tutorial_201b_run.py  tutorial_201c_evaluate.py  tutorial_201d_bonus.md
framework/tutorials/tutorial_202/: tutorial_202a_build.py  tutorial_202b_run.py  tutorial_202c_evaluate.py
remix_nz/: new_inflows.csv
(+991 files in other folders)
