[tool.pytest.ini_options]
pythonpath = [
  "remix"
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "remix"
default_section = "THIRDPARTY"
forced_separate = "test_remix"
skip = [
    ".eggs",
    "build",
    "dist"
]

[project]
name = "remix.framework"
keywords = []
readme = "README.md"
authors = [
    {name = "REMix Developers", email = "remix@dlr.de"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "jsonschema",
    "networkx",
    "numpy",
    "pandas",
    "pyyaml",
    "requests",
    "typer",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://gitlab.com/dlr-ve/esy/remix/framework"
Repository = "https://gitlab.com/dlr-ve/esy/remix/framework.git"
Documentation = "https://dlr-ve.gitlab.io/esy/remix/framework/"
Changelog = "https://gitlab.com/dlr-ve/esy/remix/framework/-/releases"

[project.optional-dependencies]
dev = [
    "remix.framework[plotting]",
    "black",
    "build",
    "coverage",
    "flake8",
    "isort",
    "py",
    "pytest",
    "pytest-cov",
    "pytest-parallel",
    "twine",
]
polars = [
    "polars",
]
excel = [
    "openpyxl",
]
plotting = [
    "cartopy",
    "fiona",
    "shapely",
    "ipykernel",
    "matplotlib",
]
tutorials = [
    "remix.framework[plotting]",
    ]
all = [
    "remix.framework[dev]",
    "remix.framework[polars]",
    "remix.framework[excel]",
    "remix.framework[plotting]",
    "remix.framework[docs]",
]
docs = [
    "remix.framework[plotting]",
    "jupytext",
    "myst_parser",
    "nbconvert",
    "pandoc",
    "pydata-sphinx-theme<=0.10.1",
    "sphinx<7",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxcontrib-jquery",
    "sphinx-design",
    "sphinxcontrib.bibtex",
]


[project.scripts]
remix = "remix.framework.cli.main:program"

[project.entry-points."remix.plugins"]
run = "remix.framework.cli.run:program_run"
test = "remix.framework.cli.test:program_test"
transform = "remix.framework.cli.transform:program_transform"
build_schemas = "remix.framework.cli.build_schemas:program_build_schemas"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
    "docs/_build",
    "*/**/*.gdx",
    "*/**/diff.json",
    "*/**/check.json",
    "*/**/*.lst",
    "*/**/cplex.o*",
    "*/**/*.log",
    "*/**/*.gsp",
    "tutorials/**/data/"
]
include = [
    "LICENSE*",
    "docs/",
    "testing/",
    "tutorials/",
    "*/**/valid.json"
]
